--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "cviebrock/eloquent-sluggable": "^4.8",
         "fideloper/proxy": "^4.0",
         "hesto/multi-auth": "^2.0",
         "laravel/framework": "5.8.*",
